compiler/testData/diagnostics/testsWithStdLib/tieredFailures/good/isKlibButLimitedToKlib.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: KLIB
// WITH_STDLIB
// TARGET_PLATFORM: Common

fun commonFunction() {}
