compiler/testData/diagnostics/testsWithStdLib/tieredFailures/fail/isBackendButFir2IrRunner.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: BACKEND
// TARGET_RUNNER_TIER: FIR2IR

fun needABetterRunner() {}
